Fix: overflow no longer making page too tall. Issue was trying to use more fr units to increase ratio between rows, when the content would no longer allow shrinking

--- a/adminDash/style.css
+++ b/adminDash/style.css
@@ -3,7 +3,15 @@
     margin:0;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     box-sizing: border-box;
+    outline:2px dashed blue;
 }
+
+
+html, body {
+    height: 100vh;
+    /* overflow: hidden; Temporarily */
+}
+
 
 ul{
     display:grid;
@@ -12,28 +20,33 @@ ul{
 
 .main-container{
     display:grid;
-    height:100vh;
     grid-template-columns: 1fr 5fr;
-    grid-template-rows: 1fr;
-}
+    grid-template-rows:1fr;
+    height:100vh;
+    /* remove this */
+    /* overflow: hidden; */
+    }
 
 /* sidebar left */
 .sidebar-left{
     background-color: aqua;
     padding:16px;
-    grid-row: 1/9;
     grid-column: 1;
     color: azure;
 
-    display:grid;
+    display:flex;
+    flex-direction: column;
+
+    /* display:grid;
     grid-template-rows: 1fr 3fr 1fr 1.5fr 4fr;
     grid-template-areas: 
     "logo"
    "options"
     "."
     "utils"
-    ;
-    gap:12px
+    ; */
+    gap:12px;
+    height:100%;
 }
 
 .logo{
@@ -61,11 +74,12 @@ ul{
 /* Second Main Container */
 .content-container{
     display:grid;
-    grid-column: 2/3;
-    grid-template-rows: 1fr 6fr ;
-    grid-template-columns: 6fr 1fr;
+    grid-column: 2;
+    grid-template-rows: 1fr 4fr ;
+    grid-template-columns: 3fr 1fr;
+    background-color: black;
     height:100%;
-    /* background-color: black; */
+
 }
 
 /* header */
@@ -73,7 +87,7 @@ ul{
 .header{
     background-color: burlywood;
     display:grid;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 1fr 2fr;
     grid-column: 1/3;
     grid-row: 1;
 }
@@ -83,25 +97,20 @@ ul{
 }
 .header-bottom{
 display:grid;
-grid-template-columns: 1fr 5fr 1fr 1fr 1fr  ;
+grid-template-columns: 1fr 5fr 1fr 1fr 1fr ;
 }
 .notifications{
 display:grid;
 }
 
 
-/* Third main container */
-.content-after-header{
-    display: grid;
-    grid-column: 1/3;
-    grid-row: 2/3;
-}
 
 /* Content Div */
 .project-section{
+
     display:grid;
-    grid-template-rows: 1fr 14fr;
-    height:100%;
+    grid-row:1fr;
+    grid-template-rows: 1fr 9fr;
 }
 
 
@@ -123,7 +132,6 @@ li{
 
 .project-header{
     grid-column: 1/2;
-    grid-row: 1/2;
     background-color: lightgrey;
 
     font-size: 32px;
@@ -141,7 +149,7 @@ li{
     gap:16px;
     display:grid;
     width:100%;
-    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     padding:16px 16px 3rem 16px;
 
 }
@@ -161,7 +169,7 @@ li{
     background-color: aquamarine;
     grid-column: 2/3;
     grid-row: 2/3;
-    grid-template-rows:1fr 15fr ;
+    grid-template-rows:1fr 9fr ;
 }
 
 .announcements-title{
